Fix BlobBytesConsumer leak

This CL fixes a BlobBytesConsumer leak caused by mis-setting blob URL and a
lack of revokePublicBlobURL call.

R=dmurph@chromium.org
BUG=695250

Review-Url: https://codereview.chromium.org/2702403007
Cr-Commit-Position: refs/heads/master@{#452715}